--- a/offline/frontend/src/App.css
+++ b/offline/frontend/src/App.css
@@ -87,6 +87,20 @@
   border: none;
 }
 
+
+/* API button styles */
+.stop-button {
+  position: absolute;
+  top: 90%;
+  left: 80%;
+  transform: translateX(-50%);
+  padding: 10px;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  border: none;
+}
+
 /* Log container styles */
 .log-container {
   width: 100%;
